--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,17 +1,33 @@
 name: "HT_KDR"
-output_dir: ../docs
+output_dir: "../docs"
 navbar:
   title: "HT_KDR"
   left:
-  - text: Home
-    href: index.html
-  - text: About
-    href: about.html
-  - text: License
-    href: license.html
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
+    - text: "Processing"
+      menu:
+        - text: "Batch integration"
+          href: 01-batch-integration.html
+        - text: "Dimensionality reduction"
+          href: 02-reduced-dimensions.html
+        - text: "Clustering"
+          href: 03-clustering.html
+        - text: "Marker gene detection"
+          href: 04-marker-detection.html
+    - text: "Interactive"
+      href: interactive.html
+  right:
+    - text: "License"
+      href: license.html
+    - icon: fab fa-github
+      href: https://github.com/jma1991/HT_KDR
 output:
   workflowr::wflow_html:
-    toc: yes
-    toc_float: yes
+    toc: true
+    toc_float: true
     theme: cosmo
     highlight: textmate
+    df_print: paged
