--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -17,6 +17,10 @@ navbar:
           href: 03-clustering.html
         - text: "Marker gene detection"
           href: 04-marker-detection.html
+    - text: "Analysis"
+      menu:
+        - text: "Signaling analysis"
+          href: signaling-analysis.html
     - text: "Interactive"
       href: interactive.html
   right:
